--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -22,12 +22,15 @@
                   .poll-item-vote-count(ng-show="poll_item.votes_count > 0")
                     {{poll_item.votes_count}}
 
-          .poll-item-text(ng-click='pollItemDetails(poll_item)')
-            %a.poll-item-details-btn
+          .poll-item-text
+            %a.poll-item-details-btn(ng-click='pollItemDetails(poll_item)')
               %h2
                 {{poll_item.title}}
             %div(ng-show='poll_item.show_details')
               %p.lead {{poll_item.description}}
+              %div(ng-controller='CommentsController' ng-init="init('poll_items','{{poll_item.id}}')" ng-cloak)
+                = render 'comments/comments', commentable: nil
+              / = render 'comments/comments', commentable: @poll
 
           .poll-item-comments(ng-click='pollItemDetails(poll_item)')
             %a.poll-item-btn.poll-item-btn-social
