many fixes; notes coming in email

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1481,6 +1481,14 @@ csingredienteditpair
 .edit-meta-button
   margin-bottom: 8px
 
+.alert.edit-alert
+  text-align: left
+  padding: 0px 20px 20px 20px
+
+  .close
+    top: 10px
+    right: 10px
+
 // See https://github.com/angular/angular.js/commit/11f712bc - these class
 // names have to change when we go to angular >= 1.1.5
 .fade-show-setup, .fade-hide-setup
