--- a/app/views/activities/_main_ingredients.html.haml
+++ b/app/views/activities/_main_ingredients.html.haml
@@ -6,9 +6,11 @@
 
   .nav(ng-show="editMode")
     %h4(ng-show="! activity.ingredients.length" ng-class="disableIf(!activity.ingredients.length)") Ingredients
-    %button.btn.btn-small.btn-secondary.add-from-master(ng-show="!masterSelect" ng-click="fillMasterIngredientsFromSteps()" tooltip="Rebuild master ingredients from step ingredients..." tooltip-placement="bottom")
-      %i.icon-magic
-    %button.btn.btn-small.btn-secondary.btn-basic.add-item(ng-click="addIngredient()" tooltip="Add ingredient"  tooltip-placement="bottom")
+    %button.btn.btn-small.btn-secondary.add-from-master(ng-show="hasAnyStepIngredients()" ng-click="fillMasterIngredientsFromSteps()" tooltip="Replace master ingredients with step ingredients..." tooltip-placement="bottom")
+      %i.icon-chevron-left
+    %button.btn.btn-small.btn-secondary.add-item(ng-click="addIngredient()" tooltip="Add ingredient"  tooltip-placement="bottom")
       %i.icon-plus
     %button.btn.btn-small.btn-primary.done(ng-show="hasActiveInputs" tooltip="Finish adding ingredients" tooltip-placement="bottom")
       Done
+
+  = render 'master_ingredients_removed_modal.html.haml'
