--- a/app/views/activities/_step_ingredients.html.haml
+++ b/app/views/activities/_step_ingredients.html.haml
@@ -9,11 +9,11 @@
   .nav(ng-show="editMode")
     %h4(ng-show="! step.ingredients.length" ng-class="disableIf(!step.ingredients.length)") Ingredients
 
-    %button.btn.btn-small.btn-secondary.add-from-master(ng-show="!masterSelect" ng-click="toggleSelectFromMaster()" tooltip="Quick add from main ingredient list..." tooltip-placement="bottom")
-      %i.icon-magic
+    %button.btn.btn-small.btn-secondary.add-from-master(ng-show="!masterSelect" ng-click="toggleSelectFromMaster()" tooltip="Quick add ingredient from master ingredient list..." tooltip-placement="bottom")
+      %i.icon-chevron-right
     %button.btn.btn-small.btn-primary.done(ng-show="masterSelect" ng-click="toggleSelectFromMaster()" tooltip="Finish adding ingredients" tooltip-placement="bottom")
       Done
-    %button.btn.btn-small.btn-secondary.btn-basic.add-item(ng-click="addIngredient($index)" ng-show="!masterSelect" tooltip="Add ingredient..." tooltip-placement="bottom")
+    %button.btn.btn-small.btn-secondary.add-item(ng-click="addIngredient($index)" ng-show="!masterSelect" tooltip="Add ingredient..." tooltip-placement="bottom")
       %i.icon-plus
     %button.btn.btn-small.btn-primary.done(ng-show="hasActiveInputs" tooltip="Finish adding ingredients" tooltip-placement="bottom")
       Done
