--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -49,7 +49,7 @@
   .container#activity-body.recipe_schema(ng-class="addEditModeClass()"){:itemscope => true, :itemtype => (@activity.is_recipe? ? "http://schema.org/Recipe" : nil), data: {:'activity-id' => @activity.id}}
     .row.noprint(ng-cloak ng-show="editMode && alerts.length > 0")
       .span8.offset2
-        %alert(ng-repeat="alert in alerts" type="alert.type || 'error'" close="closeAlert($index)")
+        %alert.edit-alert.alert-block(ng-repeat="alert in alerts" type="alert.type || 'error'" close="closeAlert($index)" ng-animate="'custom'")
           %h3 Save Failed!
           {{alert.message}}
           .section
