--- a/app/views/gallery/index.html.haml
+++ b/app/views/gallery/index.html.haml
@@ -18,7 +18,7 @@
                 %i.icon-remove-circle
 
             %li.relative
-              .filter-collapser(ng-click="collapse_filters = ! collapse_filters")
+              .filter-collapser(ng-click="collapse_filters = ! collapse_filters" ng-mouseenter="collapse_filters = false")
                 FILTER
                 %i.icon-angle-down(ng-show="collapse_filters")
                 %i.icon-angle-up(ng-hide="collapse_filters")
@@ -26,7 +26,7 @@
                 {{f.name}}
                 %span.reset-filter(ng-click="resetFilter(k)")
                   %i.icon-remove-circle
-              .filters-group(ng-show="!collapse_filters" data-ng-animate="'filters'")
+              .filters-group(ng-show="!collapse_filters" data-ng-animate="'filters'" ng-mouseleave="collapse_filters = true")
                 .btn-group.first-separate
                   %button.btn.btn-checkbox(ng-repeat="choice in typeChoices" ng-model="filters.activity_type" btn-radio="{{choice}}")
                     {{choice.name}}
