[mobile-nav] update media query so the text is visible

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1723,7 +1723,7 @@ csingredienteditpair
         width: 85%
 
   .navbar .nav > li > .dropdown-menu li a 
-    color: white
+    color: #333
     font-weight: normal
     &:hover
       color: #fff
