--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -1,7 +1,10 @@
 .container#poll{data: {:'poll-id' => "#{@poll.id}"}}
   .row
     .span12(ng-controller='VotesController' ng-cloak)
-      - current_user_votes = current_user.votes.scoped_by_type('PollItem').map(&:votable_id)
+      - if current_user
+        - current_user_votes = current_user.votes.scoped_by_type('PollItem').map(&:votable_id)
+      - else
+        - current_user_votes = false
       %span(ng-model="current_user_votes" ng-init="current_user_votes=#{current_user_votes}")
       %h1
         {{poll.title}}
