[polls] user voted indication

--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -54,6 +54,9 @@
 .poll-item-vote-count
   margin-top: 0px
 
+.poll-item-vote-label
+  font-size: 10px
+
 .poll-item-btn-voted
   background: $orange
   color: white
@@ -61,6 +64,9 @@
     cursor: pointer
     background: $orange
     color: white
+
+.poll-item-user-voted
+  @include raleway
 
 @media (min-width: 481px) and (max-width: 979px)
   .poll-item
