--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -29,6 +29,8 @@
             %a.poll-item-details-btn(ng-click='pollItemDetails(poll_item)')
               %h2
                 {{poll_item.title}}
+            .poll-item-user-voted(ng-show='current_user_voted_for_this(poll_item)')
+              You voted for this!
             %div(ng-show='poll_item.show_details')
               %p.lead {{poll_item.description}}
               %div(ng-controller='CommentsController' ng-init="init('poll_items',poll_item.id)" ng-cloak)
