[polls] voters showing on poll items

--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -68,6 +68,11 @@
 .poll-item-user-voted
   @include raleway
 
+.poll-item-voters
+  .poll-item-voter
+    float: left
+    margin-right: 5px
+
 @media (min-width: 481px) and (max-width: 979px)
   .poll-item
     font-size: 16px
