--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -31,6 +31,10 @@
                 {{poll_item.title}}
             .poll-item-user-voted(ng-show='current_user_voted_for_this(poll_item)')
               You voted for this!
+            .poll-item-voters(ng-repeat='voter in poll_item.users')
+              .poll-item-voter
+                %a(href="/profiles/{{voter.slug}}")
+                  %img(ng-src="{{userImageUrl(voter.image_id)}}")
             %div(ng-show='poll_item.show_details')
               %p.lead {{poll_item.description}}
               %div(ng-controller='CommentsController' ng-init="init('poll_items',poll_item.id)" ng-cloak)
