--- a/app/assets/stylesheets/_mixins.css.sass
+++ b/app/assets/stylesheets/_mixins.css.sass
@@ -6,10 +6,10 @@
   -o-box-sizing: border-box
 
 =shadow
-  box-shadow: 0px 0px 5px #888888
-  -moz-box-shadow: 0px 0px 5px #888888
-  -webkit-box-shadow: 0px 0px 5px #888888
-  -o-box-shadow: 0px 0px 5px #888888
+  box-shadow: 0px 0px 2px #888888
+  -moz-box-shadow: 0px 0px 2px #888888
+  -webkit-box-shadow: 0px 0px 2px #888888
+  -o-box-shadow: 0px 0px 2px #888888
 
 =dark-shadow
   box-shadow: 0px 0px 5px black
@@ -40,6 +40,12 @@
   -moz-transition: $value
   -webkit-transition: $value
   -o-transition: $value
+
+=transform($value)
+  transform: $value
+  -moz-transform: $value
+  -webkit-transform: $value
+  -o-transform: $value
 
 =animation($value)
   animation: $value
