--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -70,8 +70,36 @@
 
 .poll-item-voters
   .poll-item-voter
+    position: relative
     float: left
     margin-right: 5px
+    &:hover
+      .poll-item-voter-tooltip
+        display: block
+    .poll-item-voter-tooltip
+      display: none
+      @include raleway
+      background: $orange
+      color: white
+      padding: 5px 8px
+      position: absolute
+      @include boxsizing
+      height: 30px
+      top: -35px
+      z-index: 2
+      white-space: nowrap
+      &:after
+        content: ''
+        position: absolute
+        @include transform(rotate(45deg))
+        background: $orange
+        border-top: 0px
+        border-left: 0px
+        top: 24px
+        left: 10px
+        width: 9px
+        height: 9px
+
 
 @media (min-width: 481px) and (max-width: 979px)
   .poll-item
