[activity stream] create partials

--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -5,174 +5,11 @@
     .span10.stream-wrapper
       .stream
         .stream-line
-        - current_user.events.stream.take(4).each do |group|
+        - current_user.events.stream.each do |group|
           - group_type = group[0][0]
           - group_name = group[0][1]
           - group_events = group[1]
-          - case group_type
-          - when ['Comment','create']
-            - media_object = group_events.first.trackable.commentable
-            .stream-item  
-              .stream-item-top
-                = link_to media_object do
-                  .stream-item-title
-                    %h4 Comment
-                  .stream-item-subtitle
-                    = media_object.title
-                  = image_tag filepicker_media_box_image(media_object.image_id)
-              .stream-item-marker
-              .stream-item-bottom
-                %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
-                .stream-item-media1
-                  .stream-item-media1-user
-                    = link_to user_profile_path(group_events.first.trackable.user) do
-                      = image_tag filepicker_circle_image(group_events.first.trackable.user.image_id)
-                  .stream-item-media1-content
-                    = link_to group_events.first.trackable.user.name, user_profile_path(group_events.first.trackable.user)
-                    = "said, '#{group_events.first.trackable.content}'"
-
-          - when ['Comment','received_create']
-            - media_object = group_events.first.trackable.commentable
-            .stream-item  
-              .stream-item-top
-                = link_to media_object do
-                  .stream-item-title
-                    %h4 Comment
-                  .stream-item-subtitle
-                    = media_object.title
-                  = image_tag filepicker_media_box_image(media_object.image_id)
-              .stream-item-marker
-              .stream-item-bottom
-                %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
-                .stream-item-media1
-                  .stream-item-media1-user
-                    = link_to user_profile_path(group_events.first.trackable.user) do
-                      = image_tag filepicker_circle_image(group_events.first.trackable.user.image_id)
-                  .stream-item-media1-content
-                    = link_to group_events.first.trackable.user.name, user_profile_path(group_events.first.trackable.user)
-                    = "said, '#{group_events.first.trackable.content}'"
-
-          - when ['Course','enroll']
-            - media_object = group_events.first.trackable
-            .stream-item  
-              .stream-item-top
-                = link_to media_object do
-                  .stream-item-title
-                    %h4 Course Enrollment
-                  .stream-item-subtitle
-                    = media_object.title
-                  = image_tag filepicker_media_box_image(media_object.featured_image)
-              .stream-item-marker
-              .stream-item-bottom
-                %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
-                .stream-item-media1
-                  .stream-item-media1-user
-                    = link_to user_profile_path(group_events.first.user) do
-                      = image_tag filepicker_circle_image(group_events.first.user.image_id)
-                  .stream-item-media1-content
-                    = link_to group_events.first.user.name, user_profile_path(group_events.first.user)
-                    = "enrolled into the #{media_object.title} Course"
-
-          - when ['Like','create']
-            - media_object = group_events.first.trackable.likeable
-            .stream-item  
-              .stream-item-top
-                = link_to media_object do
-                  .stream-item-title
-                    %h4= media_object.class.to_s
-                  .stream-item-subtitle
-                    = media_object.title
-                  = image_tag filepicker_media_box_image(media_object.featured_image)
-              .stream-item-marker
-              .stream-item-bottom
-                %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
-                - if media_object.likes_count == 1
-                  .stream-item-media1
-                    .stream-item-media1-user
-                      = link_to user_profile_path(group_events.first.user) do
-                        = image_tag filepicker_circle_image(group_events.first.user.image_id)
-                    .stream-item-media1-content
-                      = link_to group_events.first.user.name, user_profile_path(group_events.first.user)
-                      = "liked #{media_object.title}."
-                - else
-                  .stream-item-media2
-                    .stream-item-media2-users
-                      - media_object.likes.each do |like|
-                        = link_to user_profile_path(like.user) do
-                          = image_tag filepicker_circle_image(like.user.image_id)
-                    .stream-item-media2-content
-                      - case media_object.likes_count
-                      - when 2
-                        = link_to media_object.likes.first.user.name, user_profile_path(media_object.likes.first.user)
-                        = "and"
-                        = link_to media_object.likes.second.user.name, user_profile_path(media_object.likes.second.user)
-                        = "liked #{media_object.title}."
-                      - else
-                        = link_to media_object.likes.first.user.name, user_profile_path(media_object.likes.first.user)
-                        = "and"
-                        = link_to media_object.likes.second.user.name, user_profile_path(media_object.likes.second.user)
-                        = "and #{media_object.likes_count - 2} more liked your #{media_object.title}."
-
-          - when ['Like','received_create']
-            - media_object = group_events.first.trackable.likeable
-            .stream-item  
-              .stream-item-top
-                = link_to media_object do
-                  .stream-item-title
-                    %h4= media_object.class.to_s
-                  .stream-item-subtitle
-                    = media_object.title
-                  = image_tag filepicker_media_box_image(media_object.image_id)
-              .stream-item-marker
-              .stream-item-bottom
-                %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
-                - if media_object.likes_count == 1
-                  .stream-item-media1
-                    .stream-item-media1-user
-                      = link_to user_profile_path(group_events.first.trackable.user) do
-                        = image_tag filepicker_circle_image(group_events.first.trackable.user.image_id)
-                    .stream-item-media1-content
-                      = link_to group_events.first.trackable.user.name, user_profile_path(group_events.first.trackable.user)
-                      = "liked your #{media_object.class.to_s.downcase}."
-                - else
-                  .stream-item-media2
-                    .stream-item-media2-users
-                      - media_object.likes.each do |like|
-                        = link_to user_profile_path(like.user) do
-                          = image_tag filepicker_circle_image(like.user.image_id)
-                    .stream-item-media2-content
-                      - case media_object.likes_count
-                      - when 2
-                        = link_to media_object.likes.first.user.name, user_profile_path(media_object.likes.first.user)
-                        = "and"
-                        = link_to media_object.likes.second.user.name, user_profile_path(media_object.likes.second.user)
-                        = "liked your #{media_object.class.to_s.downcase}."
-                      - else
-                        = link_to media_object.likes.first.user.name, user_profile_path(media_object.likes.first.user)
-                        = "and"
-                        = link_to media_object.likes.second.user.name, user_profile_path(media_object.likes.second.user)
-                        = "and #{media_object.likes_count - 2} more liked your #{media_object.class.to_s.downcase}."
-
-          - when ['Upload', 'create']
-            - media_object = group_events.first.trackable
-            .stream-item  
-              .stream-item-top
-                = link_to media_object do
-                  .stream-item-title
-                    %h4= media_object.class.to_s
-                  .stream-item-subtitle
-                    = media_object.title
-                  = image_tag filepicker_media_box_image(media_object.image_id)
-              .stream-item-marker
-              .stream-item-bottom
-                %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
-                .stream-item-media1
-                  .stream-item-media1-user
-                    = link_to user_profile_path(group_events.first.user) do
-                      = image_tag filepicker_circle_image(group_events.first.user.image_id)
-                  .stream-item-media1-content
-                    = link_to group_events.first.user.name, user_profile_path(group_events.first.user)
-                    = "uploaded this photo."
+          = render "/activity_stream/#{group_type[0].downcase}/#{group_type[1]}", group_events: group_events
 
       %h2 Latest from ChefSteps
       = render 'shared/horizontal_slider', items: @latest, direction: 'right'
