[activity stream] styling updates

--- a/app/assets/stylesheets/stream.css.sass
+++ b/app/assets/stylesheets/stream.css.sass
@@ -82,6 +82,7 @@
     text-align: left
     img
       width: 30px
+      margin-bottom: 3px
   .stream-item-media2-content
 
 @media (max-width: 1200px)
