--- a/app/views/activity_stream/upload/_create.html.haml
+++ b/app/views/activity_stream/upload/_create.html.haml
@@ -3,7 +3,7 @@
   .stream-item-top
     = link_to media_object do
       .stream-item-title
-        %h4= media_object.class.to_s
+        %h4 Photo
       .stream-item-subtitle
         = media_object.title
       = image_tag filepicker_media_box_image(media_object.image_id)
