--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -5,7 +5,7 @@
     .span10.stream-wrapper
       .stream
         .stream-line
-        - current_user.events.stream.each do |group|
+        - current_user.events.stream.take(4).each do |group|
           - group_type = group[0][0]
           - group_name = group[0][1]
           - group_events = group[1]
