[activity stream] updates

--- a/app/assets/stylesheets/horizontal_slider.css.sass
+++ b/app/assets/stylesheets/horizontal_slider.css.sass
@@ -3,6 +3,7 @@
   height: 248px
   overflow: hidden
   z-index: 1
+  width: 100%
   .horizontal-slider-wrap
     height: 248px
     position: relative
