[activity stream] update

--- a/app/assets/stylesheets/_mixins.css.sass
+++ b/app/assets/stylesheets/_mixins.css.sass
@@ -63,6 +63,7 @@ $orange: #e25f25
 //$orange: #DB7354
 $dark-orange: #D25029
 $darker-orange: #B84724
+$light-blue: #0088CC
 $blue: #006DCC
 $blue-opaque: rgba(0,109,204,.8)
 $red: #DA4f49
