--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1018,6 +1018,18 @@ a:hover
   width: 40px
   margin: 0 2px
 
+.btn-outline-blue-large
+  background: white
+  height: 44px
+  border: 1px solid $light-blue
+  border-radius: 22px
+  font-weight: 400
+  @include boxsizing
+  @include transition(all 200ms)
+  &:hover
+    background: white
+    border: 1px solid $orange
+
 /* Quiz button */
 .btn-next, .btn-prev
   position: absolute
