--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -3,13 +3,14 @@
 .poll-item
   width: 100%
   //height: 80px
-  padding: 5px 0px 
-  border-top: 1px solid gray
+  padding: 20px 0px 
+  border-top: 1px solid #ccc
   float: left
 .poll-item-vote-up
-  width: 7%
+  width: 7% 
   margin-right: 1%
   float: left
+
 .poll-item-text
   width: 72%
   float: left
@@ -43,6 +44,7 @@
   border: 0px
   @include boxsizing
   @include transition(all 200ms)
+  border-radius: 3px
   &:hover
     cursor: pointer
     background: $light-gray
