[follwers] add followership model

--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -20,4 +20,13 @@
         = link_to 'See More', gallery_index_path, class: 'btn btn-large btn-outline-blue-large'
       = render 'shared/horizontal_slider', items: @latest, direction: 'right'
 
+    .span10.stream-wrapper
+      .stream
+        .stream-line
+        - current_user.followings.first.events.stream.each do |group|
+          - group_type = group[0][0]
+          - group_name = group[0][1]
+          - group_events = group[1]
+          = render "/activity_stream/#{group_type[0].downcase}/#{group_type[1]}", group_events: group_events
+
     .span2
