[homepage-split] added split test for string on homepage showing # of users

--- a/app/views/home/_madlib.html.haml
+++ b/app/views/home/_madlib.html.haml
@@ -16,7 +16,9 @@
                   = f.email_field :email, {placeholder: 'email', required: true, id: 'madlib-email'}
                 &#46;&nbsp;&nbsp;
               .madlib-item
-                I want to learn how to be a better cook.
+                I want to 
+                = ab_test "counter_split", "learn", "join more than 10,000 others and learn"
+                how to be a better cook.
               .madlib-item.hide#madlib-password-wrapper
                 Please set my password to
                 %span.input-underlined.input-append
