more attribution for UGC

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -400,6 +400,24 @@ a:hover
       vertical-align: middle
       height: 100px
 
+#title-edit-pair
+  .profile-image
+    display: inline-block
+
+.mini-profile
+  border: 1px solid #ccc
+  border-radius: 5px
+  padding:  40px
+
+  .profile-image
+    border: 2px solid $orange
+    border-radius: 50%
+    img
+      @include boxsizing
+
+  .profile-body
+    font-size:  90%
+
 // .activity-title
 //   margin-right: 90px
 
