--- a/app/views/activities/_title.html.haml
+++ b/app/views/activities/_title.html.haml
@@ -2,11 +2,15 @@
 
   %csEditPairShow
     %h1.activity-title(ng-bind-html-unsafe="activity.title || (editMode && 'Add title...')" itemprop='name' ng-class="disableIf(! activity.title.length)")
-    -if @activity.creator || @activity.source_activity_id
+    -creator = @activity.creator
+    -if  creator|| @activity.source_activity_id
       %h5.no-bold
-      -if @activity.creator
+      -if creator
         By
-        = link_to @activity.creator.name, user_profile_path(@activity.creator)
+        -if creator.image_id?
+          .profile-image
+            = image_tag filepicker_square_image(creator.image_id, 30)
+        = link_to creator.name, user_profile_path(creator)
 
       -if @activity.source_activity_id
         -if @activity.creator
