--- a/app/views/courses/_knife-sharpening_a.haml
+++ b/app/views/courses/_knife-sharpening_a.haml
@@ -22,7 +22,7 @@
           %h4= "Current enrollment: #{@course.users.count}"
           %h3 Some user creations:
           .horizontal-slider{data: {direction: 'right'}}
-            .horizontal-slider-wrapl
+            .horizontal-slider-wrap
               - @course.uploads.includes(:user).approved.order('created_at DESC').each do |upload|
                 = render 'shared/media_box', size: 'medium', url: upload_path(upload), title: upload.title, image: upload.image_id
             %div{class: "horizontal-slider-btn-right btn btn-circle"}
