--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1124,10 +1124,10 @@ a:hover
     &:hover
       background: $orange
       cursor: pointer
-      #nav-search-toggle
+      .icon-search
         color: white
         text-decoration: none
-    #nav-search-toggle
+    .icon-search
       margin: 21px 10px 22px
       color: black
       float: left
